Crazy styling to prevent overflow that I should undo

--- a/src/renderer/index.css
+++ b/src/renderer/index.css
@@ -27,6 +27,11 @@ td {
   @apply flex flex-col gap-2;
 }
 
+.markdown > * {
+  @apply min-w-0;
+  @apply flex-1;
+}
+
 .markdown ol {
   @apply list-inside list-decimal;
 }
